# low-thrust-mission-design

./: .gitignore  CMakeLists.txt  README.md  demo_results.md
config/: convergence_test.yaml  convergence_test_euler.yaml  earth_jupiter_high_ion.yaml  earth_jupiter_low_hall.yaml  earth_mars_baseline.yaml  earth_mars_high_hall.yaml  earth_mars_high_ion.yaml  earth_mars_low_hall.yaml  earth_mars_low_ion.yaml  earth_venus_high_hall.yaml  earth_venus_low_ion.yaml  mission_batch.txt
cpp/: CMakeLists.txt
cpp/src/: comparison.cpp  comparison.h  constants.h  dynamics.cpp  dynamics.h  main.cpp  mission_batch.cpp  mission_batch.h  mission_propagation.cpp  mission_propagation.h  orbital_elements.cpp  orbital_elements.h  propagator.cpp  propagator.h
cpp/tests/: CMakeLists.txt  test_kepler.cpp  test_propagation.cpp
results/: mission_report.html
scripts/: analyze_missions.py  requirements.txt  run_convergence_comparison.py  run_convergence_study.py
